Fixing macro errors, moving around files

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,1 +1,6 @@
-target_sources(SDLPlayground PRIVATE util.cpp controls/controller.cpp PUBLIC util.h events.h macros.h controls/controller.h)
+FetchContent_Declare(
+	gamecontrollerdb
+	URL https://raw.githubusercontent.com/mdqinc/SDL_GameControllerDB/master/gamecontrollerdb.txt
+)
+
+target_sources(SDLPlayground PRIVATE logger.cpp controls/controller.cpp PUBLIC logger.h events.h macros.h controls/controller.h)
