--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -3,4 +3,4 @@ FetchContent_Declare(
 	URL https://raw.githubusercontent.com/mdqinc/SDL_GameControllerDB/master/gamecontrollerdb.txt
 )
 
-target_sources(SDLPlayground PRIVATE logger.cpp controls/controller.cpp PUBLIC logger.h events.h macros.h controls/controller.h)
+target_sources(SDLPlayground PRIVATE logger.cpp controls/controller.cpp PUBLIC logger.h events.h macros.h math.h controls/controller.h)
