--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,6 +1,7 @@
-FetchContent_Declare(
-	gamecontrollerdb
-	URL https://raw.githubusercontent.com/mdqinc/SDL_GameControllerDB/master/gamecontrollerdb.txt
-)
-
 target_sources(SDLPlayground PRIVATE logger.cpp controls/controller.cpp PUBLIC logger.h events.h macros.h math.h controls/controller.h)
+
+
+add_custom_target(gamecontrollerdb
+	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/controls/gamecontrollerdb.txt ${CMAKE_BINARY_DIR}/bin/gamecontrollerdb.txt
+)
+add_dependencies(SDLPlayground gamecontrollerdb)
