Started on keyboard control method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,8 @@
 		"xutility": "cpp",
 		"memory_resource": "cpp",
 		"string_view": "cpp",
-		"cinttypes": "cpp"
+		"cinttypes": "cpp",
+		"*.rh": "cpp",
+		"*.inc": "cpp"
 	}
 }
