Tried adding Vulkan support
Only to learn my laptop's GPU does not support it. I think.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,16 @@ project(SDLPlayground)
 find_package(SDL2 REQUIRED)
 include_directories(SDLPlayground ${SDL2_INCLUDE_DIRS})
 
+find_package(Vulkan REQUIRED)
+include_directories(SDLPlayground ${Vulkan_INCLUDE_DIRS})
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_BUILD_TYPE Debug)
 
 add_executable(SDLPlayground ${SOURCE})
 add_subdirectory(src)
 
+set_property(TARGET SDLPlayground PROPERTY CXX_STANDARD 20)
+
 target_link_libraries(SDLPlayground
- ${SDL2_LIBRARIES})
+ ${SDL2_LIBRARIES} ${Vulkan_LIBRARIES})
