--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
-target_sources(SDLPlayground PRIVATE app.cpp game.cpp main.cpp PUBLIC app.h game.h)
+target_sources(SDLPlayground PRIVATE game.cpp main.cpp PUBLIC game.h)
 
 add_subdirectory(util)
+add_subdirectory(app)
