Shaders now sort of are in

--- a/src/app/vulkan/CMakeLists.txt
+++ b/src/app/vulkan/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(SDLPlayground PRIVATE vulkan.cpp renderer.cpp PUBLIC vulkan.h renderer.h)
+target_sources(SDLPlayground PRIVATE vulkan.cpp renderer.cpp shader.cpp PUBLIC vulkan.h renderer.h shader.h)
