--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(SDLPlayground)
 
 find_package(SDL2 REQUIRED)
 find_package(Vulkan REQUIRED)
-include_directories(SDLPlayground ${Vulkan_INCLUDE_DIR})
+find_package(glm REQUIRED)
+include_directories(SDLPlayground ${Vulkan_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_BUILD_TYPE Debug)
@@ -14,4 +15,4 @@ add_subdirectory(src)
 set_property(TARGET SDLPlayground PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(SDLPlayground
- ${SDL2_LIBRARIES} ${Vulkan_LIBRARIES})
+ ${SDL2_LIBRARIES} ${Vulkan_LIBRARIES} glm)
