--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(SDLPlayground PRIVATE app.cpp PUBLIC app.h errors.h)
+target_sources(SDLPlayground PRIVATE app.cpp object.cpp PUBLIC app.h errors.h object.h)
 
 add_subdirectory(vulkan)
