Revising more of the setup to try and make sense, next blockage is the pipeline
Figuring out how to get multiple pipelines to work together

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(SDLPlayground PRIVATE app.cpp object.cpp PUBLIC app.h errors.h object.h)
+target_sources(SDLPlayground PRIVATE app.cpp object.cpp scene_manager.cpp PUBLIC app.h errors.h object.h scene.h scene_manager.h)
 
 add_subdirectory(vulkan)
