Update CMakeLists to use .hpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(SDLPlayground PRIVATE game.cpp main.cpp PUBLIC game.h)
+target_sources(SDLPlayground PRIVATE game.cpp main.cpp PUBLIC game.hpp)
 
 add_subdirectory(util)
 add_subdirectory(app)
