--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(SDLPlayground PRIVATE app.cpp object.cpp scene_manager.cpp PUBLIC app.h errors.h object.h scene.h scene_manager.h)
+target_sources(SDLPlayground PRIVATE app.cpp object.cpp scene_manager.cpp PUBLIC app.hpp errors.hpp object.hpp scene.hpp scene_manager.hpp)
 
 add_subdirectory(vulkan)
