--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,9 @@
-cmake_minimum_required(VERSION 3.25.1)
+cmake_minimum_required(VERSION 3.10.0)
 project(SDLPlayground)
 
-find_package(SDL2 REQUIRED)
-find_package(Vulkan REQUIRED)
-find_package(glm REQUIRED)
-include_directories(SDLPlayground ${Vulkan_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_BUILD_TYPE Debug)
+find_package(SDL2 CONFIG REQUIRED)
+find_package(VulkanHeaders CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 add_executable(SDLPlayground ${SOURCE})
 add_subdirectory(src)
@@ -15,4 +11,4 @@ add_subdirectory(src)
 set_property(TARGET SDLPlayground PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(SDLPlayground
- ${SDL2_LIBRARIES} ${Vulkan_LIBRARIES} glm)
+ SDL2::SDL2 Vulkan::Headers glm::glm)
