Fix gamecontrollerdb copy command

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -2,6 +2,6 @@ target_sources(SDLPlayground PRIVATE controls/controller.cpp controls/keyboard.c
 
 
 add_custom_target(gamecontrollerdb
-	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/controls/gamecontrollerdb.txt ${CMAKE_BINARY_DIR}/bin/gamecontrollerdb.txt
+	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/controls/gamecontrollerdb.txt ${CMAKE_BINARY_DIR}/gamecontrollerdb.txt
 )
 add_dependencies(SDLPlayground gamecontrollerdb)
