--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,15 @@ find_package(SDL2 CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
-add_executable(SDLPlayground ${SOURCE})
+add_executable(SDLPlayground WIN32 ${SOURCE})
 add_subdirectory(src)
 
 set_property(TARGET SDLPlayground PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(SDLPlayground
+if(TARGET SDL2::SDL2main)
+    # It has an implicit dependency on SDL2 functions, so it MUST be added before SDL2::SDL2 (or SDL2::SDL2-static)
+    target_link_libraries(SDLPlayground PRIVATE SDL2::SDL2main)
+endif()
+
+target_link_libraries(SDLPlayground PRIVATE
  SDL2::SDL2 Vulkan::Vulkan glm::glm)
