--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(SHADER_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/main.frag ${CMAKE_CURRENT_SOURCE_DIR}/main.vert)
 
+make_directory(${APP_DIR}/shaders)
+
 add_custom_target(shaders
 	COMMAND glslc -c ${SHADER_SOURCE}
-	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+	WORKING_DIRECTORY ${APP_DIR}/shaders
 )
-# TODO: Copy the files to the Debug/shaders directory.
