New object system

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(SDLPlayground PRIVATE app.cpp object.cpp camera.cpp scene_manager.cpp PUBLIC app.hpp errors.hpp object.hpp camera.hpp scene.hpp scene_manager.hpp)
+target_sources(SDLPlayground PRIVATE app.cpp object.cpp mesh.cpp camera.cpp scene_manager.cpp PUBLIC app.hpp errors.hpp object.hpp mesh.hpp camera.hpp scene.hpp scene_manager.hpp)
 
 add_subdirectory(vulkan)
